--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "material-ui-filter": "^2.1.13",
     "mqtt": "^2.18.8",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-dropzone": "^8.0.3",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.3",
+    "react-scripts": "^2.1.8",
+    "react-vis": "^1.11.6",
     "redux": "^4.0.1",
     "redux-form": "^8.1.0",
     "redux-thunk": "^2.3.0",
