--- a/middleware/package.json
+++ b/middleware/package.json
@@ -12,6 +12,7 @@
     "koa": "^2.7.0",
     "koa-cors": "0.0.16",
     "koa-router": "^7.4.0",
-    "mysql": "^2.16.0"
+    "mysql": "^2.16.0",
+    "util": "^0.11.1"
   }
 }
